--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     " underscore": "^1.8.3",
+    "bcryptjs": "^2.4.0",
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "pg": "^4.4.1",
